--- a/papers/alan_lujan/notebooks/Curvilinear_Interpolation.ipynb
+++ b/papers/alan_lujan/notebooks/Curvilinear_Interpolation.ipynb
@@ -25,11 +25,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "source": [
-    "Suppose we have a collection of values for an unknown function along with their respective coordinate points. For illustration, assume the values come from the following function:\n"
+    "Suppose we have a collection of values for an unknown function along with their respective coordinate points. For illustration, assume the values come from the following function:\n",
+    "\n"
    ]
   },
   {
@@ -231,7 +230,7 @@
     }
    ],
    "source": [
-    "#| label: fig:curvilinear_original\n",
+    "# | label: fig:curvilinear_original\n",
     "\n",
     "plt.imshow(function_1(grid_x, grid_y).T, extent=(0, 1, 0, 1), origin=\"lower\")\n",
     "plt.plot(rand_x.flat, rand_y.flat, \"ok\", ms=2, label=\"input points\")\n",
@@ -271,7 +270,7 @@
     }
    ],
    "source": [
-    "#| label: fig:curvilinear_result\n",
+    "# | label: fig:curvilinear_result\n",
     "\n",
     "fig, axs = plt.subplots(1, 3, figsize=(9, 6))\n",
     "titles = [\"Original\", \"WarpedInterp\", \"CurvilinearInterp\"]\n",
@@ -289,18 +288,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In short, `multinterp`'s `Warped2DInterp` and `Curvilinear2DInterp` classes are useful for interpolating functions on curvilinear grids which have a quadrilateral structure but are not perfectly rectangular.\n"
+    "In short, `multinterp`'s `Warped2DInterp` and `Curvilinear2DInterp` classes are useful for interpolating functions on curvilinear grids which have a quadrilateral structure but are not perfectly rectangular.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,py:percent"
+   "formats": "ipynb,md"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
