--- a/papers/alan_lujan/notebooks/Multivalued_Interpolation.ipynb
+++ b/papers/alan_lujan/notebooks/Multivalued_Interpolation.ipynb
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "#| label: fig:multivalued\n",
+    "# | label: fig:multivalued\n",
     "\n",
     "mult_interp = MultivaluedInterp(z_mat, [x_grid, y_grid], backend=\"cupy\")\n",
     "z_mult_interp = mult_interp(x_new, y_new).get()\n",
@@ -130,6 +130,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,md"
+  },
   "kernelspec": {
    "display_name": "multinterp-dev",
    "language": "python",
