--- a/papers/alan_lujan/notebooks/Multivariate_Interpolation_with_Derivatives.ipynb
+++ b/papers/alan_lujan/notebooks/Multivariate_Interpolation_with_Derivatives.ipynb
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "#| label: fig:multivariate\n",
+    "# | label: fig:multivariate\n",
     "\n",
     "mult_interp = MultivariateInterp(z_mat, [x_grid, y_grid], backend=\"cupy\")\n",
     "z_mult_interp = mult_interp(x_new, y_new).get()\n",
@@ -150,7 +150,7 @@
     }
    ],
    "source": [
-    "#| label: fig:multivariate_dx\n",
+    "# | label: fig:multivariate_dx\n",
     "\n",
     "dfdx = mult_interp.diff(0)\n",
     "z_dfdx = dfdx(x_new, y_new).get()\n",
@@ -196,7 +196,7 @@
     }
    ],
    "source": [
-    "#| label: fig:multivariate_dy\n",
+    "# | label: fig:multivariate_dy\n",
     "\n",
     "dfdy = mult_interp.diff(1)\n",
     "z_dfdy = dfdy(x_new, y_new).get()\n",
@@ -227,6 +227,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,md"
+  },
   "kernelspec": {
    "display_name": "multinterp-dev",
    "language": "python",
