--- a/papers/alan_lujan/notebooks/Unstructured_Interpolation.ipynb
+++ b/papers/alan_lujan/notebooks/Unstructured_Interpolation.ipynb
@@ -23,11 +23,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "source": [
-    "Suppose we have a collection of values for an unknown function along with their respective coordinate points. For illustration, assume the values come from the following function:\n"
+    "Suppose we have a collection of values for an unknown function along with their respective coordinate points. For illustration, assume the values come from the following function:\n",
+    "\n"
    ]
   },
   {
@@ -188,7 +187,7 @@
     }
    ],
    "source": [
-    "#| label: fig:unstructured_original\n",
+    "# | label: fig:unstructured_original\n",
     "\n",
     "true_grid = function_1(grid_x, grid_y)\n",
     "plt.imshow(true_grid.T, extent=(0, 3, 0, 3), origin=\"lower\")\n",
@@ -229,7 +228,7 @@
     }
    ],
    "source": [
-    "#| label: fig:unstructured_interpolated\n",
+    "# | label: fig:unstructured_interpolated\n",
     "\n",
     "fig, axs = plt.subplots(2, 2, figsize=(6, 6))\n",
     "titles = [\"Nearest\", \"Linear\", \"Cubic\", \"Radial basis function\"]\n",
@@ -267,7 +266,7 @@
     }
    ],
    "source": [
-    "#| label: fig:unstructured_gp\n",
+    "# | label: fig:unstructured_gp\n",
     "\n",
     "from multinterp import RegressionUnstructuredInterp\n",
     "\n",
@@ -295,7 +294,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,py:percent"
+   "formats": "ipynb,md"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
